third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/no_let_outside_if.exp

Diagnostics:
error: undeclared `y`
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:4:9
  │
4 │         y = 5;
  │         ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:4:14
  │
4 │         y = 5;
  │              ^

error: undeclared `y`
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:6:9
  │
6 │         y = 0;
  │         ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:6:14
  │
6 │         y = 0;
  │              ^

error: undeclared `y`
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:8:13
  │
8 │     assert!(y == 5, 42);
  │             ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/v1-commands/no_let_outside_if.move:8:24
  │
8 │     assert!(y == 5, 42);
  │                        ^
